objects/PatientAddress__c.object
<CustomObject>
    <fields>
        <fullName>Apartment_Number__c</fullName>
        <label>Apartment Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Street_Number__c + &quot; &quot; +   TEXT(Street_Direction__c) + &quot; &quot; + Street_Name__c  + &quot; &quot;+ IF( ISBLANK(Apartment_Number__c), &quot;#&quot;, &quot;&quot;) + Apartment_Number__c + &quot;, &quot; +  City__c + &quot;, &quot; +  TEXT(State__c) + &quot; &quot; +  Zipcode__c</formula>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NameForAddress__c</fullName>
        <label>NameForAddress</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Direction__c</fullName>
        <label>Street Direction</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <description>The number part of a street address</description>
        <label>Street Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Patient Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Full_Addresses</fullName>
        <columns>Patient__c</columns>
        <columns>NAME</columns>
        <columns>Street_Number__c</columns>
        <columns>Street_Direction__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Apartment_Number__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zipcode__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full Addresses</label>
    </listViews>
    <nameField>
        <displayFormat>Address-{00000000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>